...
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nXS-vf-0Sk">
                    <rect key="frame" x="32" y="92" width="364" height="416"/>
                    <accessibility key="accessibilityConfiguration" identifier="astronomyImage" label="Astronomy picture Of the Day">
                        <bool key="isElement" value="YES"/>
                    </accessibility>
                    <constraints>
                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="425.5" id="RkR-Lh-gUq"/>
                        <constraint firstAttribute="width" secondItem="nXS-vf-0Sk" secondAttribute="height" multiplier="7:8" id="ZZ6-bS-zdY"/>
                        <constraint firstAttribute="width" secondItem="nXS-vf-0Sk" secondAttribute="height" multiplier="16:9" priority="999" id="xab-KY-MjE"/>
...
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ycE-FJ-0dW">
                    <rect key="frame" x="32" y="528" width="364" height="398"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ade-bC-zUu">
                            <rect key="frame" x="0.0" y="0.0" width="364" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="mediaTitle"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="40" id="6L4-ys-t1y"/>
                            </constraints>
                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                            <color key="textColor" systemColor="systemGrayColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="751" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ht-3C-HoP">
                            <rect key="frame" x="0.0" y="60" width="364" height="306"/>
                            <accessibility key="accessibilityConfiguration" identifier="mediaExplaination"/>
                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                            <color key="textColor" systemColor="labelColor"/>
                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                        </textView>
                    </subviews>
...
