...

    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Picture Of The Day"
        view.accessibilityIdentifier = "podView"
        datePicker.accessibilityIdentifier = "apodDatePicker"
        
        let formatter = DateFormatter()
        formatter.dateFormat = "yyyy/MM/dd"
        selectedDate = formatter.date(from: "2022/08/01")!
        populateDatePicker()
    }
...
